--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.js",
-    "start": "node ./src/index.js"
+    "dev": "nodemon ./index.js",
+    "start": "node ./index.js"
   },
   "dependencies": {
     "body-parser": "1.20.0",
     "cors": "2.8.5",
+    "dotenv": "^16.0.2",
     "express": "4.18.1",
     "mssql": "9.0.1",
+    "pkg": "^5.8.0",
     "swagger-jsdoc": "^4.3.2",
-    "swagger-json": "^2.0.0",
-    "swagger-ui-express": "^4.5.0",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
